# seshat

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: create-release.yml
src/: entities.rs  errors.rs  library.rs  main.rs  metadata_entities.rs  router.rs  utils.rs
src/router/: lib_content.rs
src/router/opds/: constants.rs  links.rs  mod.rs  models.rs  opds_models.rs  types.rs
