[package]
description = "A OPDS catalog viewer for Calibre libraries."
name = "seshat"
version = "0.1.0"
edition = "2024"
authors = ["thunder04"]

[dependencies]
# Logging and error handling crates
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
color-eyre = "0.6.3"
eyre = "0.6.12"

# (De)serialization crates
quick-xml = { version = "0.37.2", features = ["serde-types", "serialize"] }
time = { version = "0.3.37", features = ["serde"] }
serde = "1.0.217"

# Web crates
actix-web = { version = "4.9.0" }
mime = "0.3.17"

# Other crates
parking_lot = "0.12.3"
async-sqlite = { version = "0.5.0", features = ["bundled", "time"] }
tokio = { version = "1.43.0", features = [
    "rt-multi-thread",
    "parking_lot",
    "fs",
    "process",
    "signal",
    "time",
    "sync",
    "macros",
] }
clap = { version = "4.5.29", features = ["cargo", "color", "derive", "suggestions"] }
