[package]
description = "An OPDS Catalog viewer for Calibre libraries."
name = "seshat"
version = "0.2.0"
edition = "2024"
authors = ["thunder04"]

[dependencies]
# Logging and error handling crates
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
color-eyre = "0.6.3"
thiserror = "2.0.11"
tracing = "0.1.41"
eyre = "0.6.12"

# (De)serialization crates
quick-xml = { version = "0.37.2", features = ["serde-types", "serialize"] }
time = { version = "0.3.37", features = ["serde"] }
percent-encoding = "2.3.1"
serde_urlencoded = "0.7.1"
serde = "1.0.217"

# Web crates
actix-web = { version = "4.9.0" }
actix-files = "0.6.6"
mime_guess = "2.0.5"
mime = "0.3.17"

# Other crates
clap = { version = "4.5.29", features = ["cargo", "derive", "suggestions"] }
async-sqlite = { version = "0.5.0", features = ["bundled", "time"] }
const_format = "0.2.34"
parking_lot = "0.12.3"
base16ct = "0.2.0"
sha3 = "0.10.8"

tokio = { version = "1.43.0", features = [
    "rt-multi-thread",
    "parking_lot",
    "process",
    "signal",
    "macros",
    "time",
    "sync",
    "fs",
] }
